--- a/apps/ubipong-ui/src/app/pages/round-robin-match-sheet/round-robin-match-sheet.component.html
+++ b/apps/ubipong-ui/src/app/pages/round-robin-match-sheet/round-robin-match-sheet.component.html
@@ -1,11 +1,11 @@
 <div id="round-robin-match-sheet">
-  <div *ngFor="let mg of matchGroupList; let i = index">
+  <div *ngFor="let mg of matchGroupList | async; let i = index">
     <h2>{{event?.name}}</h2>
     <table>
       <tr><th *ngFor="let gh of gameHeader()">{{gh}}</th></tr>
       <ng-container *ngFor="let m of mg">
-        <tr><td>{{m.player1Seed}}</td><td>{{m.player1Name}}</td><td *ngFor="let b of gameResultBlank()">{{b}}</td></tr>
-        <tr><td>{{m.player2Seed}}</td><td>{{m.player2Name}}</td><td *ngFor="let b of gameResultBlank()">{{b}}</td></tr>
+        <tr><td>{{m.player1SeedAsAlphabet}}</td><td>{{m.player1Name}}</td><td *ngFor="let b of gameResultBlank()">{{b}}</td></tr>
+        <tr><td>{{m.player2SeedAsAlphabet}}</td><td>{{m.player2Name}}</td><td *ngFor="let b of gameResultBlank()">{{b}}</td></tr>
         <tr><td class="blank-row"></td></tr>
       </ng-container>
     </table>
