Added navigation menu

--- a/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
+++ b/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
@@ -1,7 +1,29 @@
-<nav>
-    <li><a routerLink="dashboard">Dashboard/Home Page</a></li>
-    <li><a routerLink="rr-grid">Round robin grid</a></li>
-    <li><a routerLink="rr-match-sheet">Round robin match sheet</a></li>
-    <li><a routerLink="event-player-list">Event player list</a></li>
-    <li><a routerLink="header">Header</a></li>
-</nav>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'"
+    [opened]="(isHandset$ | async) === false">
+    <mat-toolbar>Menu</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/dashboard">Dashboard/Home Page</a>
+      <a mat-list-item routerLink="/rr-grid">Round robin grid</a>
+      <a mat-list-item routerLink="/rr-match-sheet">Round robin match sheet</a>
+      <a mat-list-item routerLink="/event-player-list">Event player list</a>
+      <a mat-list-item routerLink="/header">Header</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <span>Ubipong Tournament Manager</span>
+    </mat-toolbar>
+    <ng-content></ng-content>
+  </mat-sidenav-content>
+</mat-sidenav-container>
