--- a/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.scss
+++ b/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.scss
@@ -3,46 +3,23 @@ div#tournament-list {
 
   section.tournament-card-list {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: stretch;
 
-    mat-card {
+    mat-card.tournament-card {
       margin: 1rem;
-    }
-  }
-}
-div.content {
-  padding: 1rem;
-  div#input-error-message {
-    min-height: 3.25rem;
-  }
-  div#new-tournament-box {
-    div#accordion-add-tournament {
-      margin-left: none;
-      display: table;
-    }
-    div#new-tournament-form {
-      margin: 0 0 1rem;
-      button {
-        margin: 0 1rem;
-      }
-      input {
-        text-align: left;
+      flex: 1 1 0;
+
+      :hover {
+        cursor: pointer;        
       }
     }
   }
-  ul {
-    margin: 0;
-    padding: 0;
-    li.tournament-item {
-      list-style-type: none;
-      h2.tournament-name {
-        margin-bottom: -.5rem;
-      }
-      p.tournament-date {
-        margin-top: 0;
-        text-align: left;
-      }
+
+  .new-tournament-panel {
+    mat-panel-description {
+      text-align: right;
     }
   }
 }
