--- a/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.scss
+++ b/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.scss
@@ -17,9 +17,9 @@ div#tournament-list {
     }
   }
 
-  .new-tournament-panel {
+  #accordion-add-tournament {
     mat-panel-description {
-      text-align: right;
+      flex-direction: row-reverse;
     }
   }
 }
