--- a/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.scss
+++ b/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.scss
@@ -21,5 +21,12 @@ div#tournament-list {
     mat-panel-description {
       flex-direction: row-reverse;
     }
+
+    #form-field-new-name {
+      width: 30rem;
+    }
+    #input-new-tournament-date {
+      width: 10rem;
+    }
   }
 }
