Updated menu items

--- a/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
+++ b/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
@@ -5,8 +5,8 @@
     [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/dashboard">Dashboard/Home Page</a>
-      <a mat-list-item routerLink="/event-player-list">Event player list</a>
+      <a mat-list-item routerLink="/dashboard">Home</a>
+      <a mat-list-item routerLink="/event-player-list">RR Group Tool</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
