--- a/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
+++ b/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
@@ -1,1 +1,14 @@
-<p>event-list works!</p>
+<section class="event-card-list">
+  <mat-card class="event" *ngFor="let event of eventList">
+    <mat-card-header>
+      <mat-card-title class="event-name">{{event.name}}</mat-card-title>
+      <mat-card-subtitle>{{event.challongeUrl}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-actions>
+      <button mat-button class="button-round-robin-match-sheet"
+        color="primary" (click)="viewRoundRobinMatchSheet(event)">
+        View Match Sheet
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</section>
