WIP: Adding new event form

--- a/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.html
+++ b/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.html
@@ -35,7 +35,7 @@
   
         <p>
           <button mat-button color="primary" id="button-add-tournament" [disabled]="isNewTournamentFormInvalid" (click)="addTournament()">Add</button>
-          <button mat-button colod="secondary" id="button-add-tournament-cancel" (click)="toggleNewTournamentForm()">Cancel</button>
+          <button mat-button color="secondary" id="button-add-tournament-cancel" (click)="toggleNewTournamentForm()">Cancel</button>
         </p>
       </div>
     </mat-expansion-panel>
