WIP: Adding new event form, part 2

--- a/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.html
@@ -1,7 +1,7 @@
 <app-main-menu>
   <h1>Events for Tournament</h1>
   
-  <div id="accordion-add-event" (click)="toggleNewEventForm()">
+  <!-- <div id="accordion-add-event" (click)="toggleNewEventForm()">
     <p>Add Event</p> 
   </div>
   <a id="view-round-robin-page" (click)="navigateToRoundRobinPage()">View Round Robin</a> 
@@ -10,7 +10,7 @@
     <p>Challonge URL: <input id="input-new-challonge-url" #inputChallongeUrl></p>
     <button id="button-add-event" (click)="addEvent(inputNewName.value, inputChallongeUrl.value)">Add</button>
     <button id="button-add-event-canel">Cancel</button>
-  </div>
+  </div> -->
 
 
 
