--- a/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.html
@@ -1,51 +1,42 @@
 <app-main-menu>
-  <h1>Events for Tournament</h1>
-  
-  <!-- <div id="accordion-add-event" (click)="toggleNewEventForm()">
-    <p>Add Event</p> 
-  </div>
-  <a id="view-round-robin-page" (click)="navigateToRoundRobinPage()">View Round Robin</a> 
-  <div id="new-event-form" *ngIf="isNewEventFormOpen">
-    <p>Name: <input id="input-new-name" #inputNewName></p>
-    <p>Challonge URL: <input id="input-new-challonge-url" #inputChallongeUrl></p>
-    <button id="button-add-event" (click)="addEvent(inputNewName.value, inputChallongeUrl.value)">Add</button>
-    <button id="button-add-event-canel">Cancel</button>
-  </div> -->
-
-
-
-  <mat-accordion id="accordion-add-event" #accordionAddEvent>
-    <mat-expansion-panel [(expanded)]="isNewEventFormOpen">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Add Event
-        </mat-panel-title>
-        <mat-panel-description>
-        </mat-panel-description>
-      </mat-expansion-panel-header>
-
-      <div id="new-event-form">
-        <mat-form-field id="form-field-new-name">
-          <mat-label>Name</mat-label>
-          <input matInput id="input-new-name" type="text" size="48" [formControl]="inputNewName">
-          <mat-error *ngIf="inputNewName.invalid">{{inputNewNameErrorMessage}}</mat-error>
-        </mat-form-field>
+  <section id="tournament-page">
+    <h1>Events for Tournament</h1>
     
-        <mat-form-field id="form-field-new-event-date">
-          <mat-label>Date</mat-label>
-          <input matInput id="input-new-challonge-url" type="text" size="48" [formControl]="inputNewChallongeUrl">
-          <mat-error *ngIf="inputNewChallongeUrl.invalid">{{inputNewChallongeUrlErrorMessage}}</mat-error>
-        </mat-form-field>
-  
-        <p>
-          <button mat-button color="primary" id="button-add-event" [disabled]="isNewEventFormInvalid" (click)="addEvent()">Add</button>
-          <button mat-button color="secondary" id="button-add-event-cancel" (click)="toggleNewEventForm()">Cancel</button>
-        </p>
-      </div>
-    </mat-expansion-panel>
-  </mat-accordion>
+    <a id="view-round-robin-page" (click)="navigateToRoundRobinPage()">View Round Robin</a> 
+
+    <mat-accordion id="accordion-add-event" #accordionAddEvent>
+      <mat-expansion-panel [(expanded)]="isNewEventFormOpen">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Add Event
+          </mat-panel-title>
+          <mat-panel-description>
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+
+        <div id="new-event-form">
+          <mat-form-field id="form-field-new-name">
+            <mat-label>Name</mat-label>
+            <input matInput id="input-new-name" type="text" size="48" [formControl]="inputNewName">
+            <mat-error *ngIf="inputNewName.invalid">{{inputNewNameErrorMessage}}</mat-error>
+          </mat-form-field>
+      
+          <mat-form-field id="form-field-new-event-date">
+            <mat-label>Date</mat-label>
+            <input matInput id="input-new-challonge-url" type="text" size="48" [formControl]="inputNewChallongeUrl">
+            <mat-error *ngIf="inputNewChallongeUrl.invalid">{{inputNewChallongeUrlErrorMessage}}</mat-error>
+          </mat-form-field>
+    
+          <p>
+            <button mat-button color="primary" id="button-add-event" [disabled]="isNewEventFormInvalid" (click)="addEvent()">Add</button>
+            <button mat-button color="secondary" id="button-add-event-cancel" (click)="toggleNewEventForm()">Cancel</button>
+          </p>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
 
 
-  <app-event-list [eventList]="eventList" (viewRoundRobinMatchSheet)="navigateToRoundRobinMatchSheet($event)">
-  </app-event-list>
+    <app-event-list [eventList]="eventList" (viewRoundRobinMatchSheet)="navigateToRoundRobinMatchSheet($event)">
+    </app-event-list>
+  </section>
 </app-main-menu>
