--- a/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.html
+++ b/apps/ubipong-ui/src/app/components/tournament-list/tournament-list.component.html
@@ -1,58 +1,13 @@
-<div id="tournament-list">
-  <h1>Tournaments</h1>
-  <div id="input-error-message">
-    <div class="lcars-element lcars-u-5" *ngIf="hasError()">{{errorMessage}}</div>
-  </div>
-
-  <mat-accordion id="accordion-add-tournament" #accordionAddTournament>
-    <mat-expansion-panel [(expanded)]="isNewTournamentFormOpen">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Add Tournament
-        </mat-panel-title>
-        <mat-panel-description>
-        </mat-panel-description>
-      </mat-expansion-panel-header>
-
-      <div id="new-tournament-form">
-        <mat-form-field id="form-field-new-name">
-          <mat-label>Name</mat-label>
-          <input matInput id="input-new-name" type="text" size="48" [formControl]="inputNewName">
-          <mat-error *ngIf="inputNewName.invalid">{{inputNewNameErrorMessage}}</mat-error>
-        </mat-form-field>
-    
-        <mat-form-field id="form-field-new-tournament-date">
-          <mat-label>Date</mat-label>
-          <input matInput id="input-new-tournament-date" placeholder="yyyy-MM-dd" [matDatepicker]="datepicker" [formControl]="inputNewTournamentDate">
-          <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
-          <mat-datepicker #datepicker>
-            <mat-datepicker-actions>
-              <button mat-button matDatepickerCancel>Cancel</button>
-              <button mat-raised-button color="primary" matDatepickerApply>Apply</button>
-            </mat-datepicker-actions>
-          </mat-datepicker>
-        </mat-form-field>
-  
-        <p>
-          <button mat-button color="primary" id="button-add-tournament" [disabled]="isNewTournamentFormInvalid" (click)="addTournament()">Add</button>
-          <button mat-button color="secondary" id="button-add-tournament-cancel" (click)="toggleNewTournamentForm()">Cancel</button>
-        </p>
-      </div>
-    </mat-expansion-panel>
-  </mat-accordion>
-
-  <section class="tournament-card-list">
-    <mat-card *ngFor="let tournament of tournamentList"
-      class="tournament-card" (click)="navigateToTournamentDetails(tournament)">
-      <mat-card-header>
-        <mat-card-title class="tournament-name">{{tournament.name}}</mat-card-title>
-        <mat-card-subtitle>{{tournament.tournamentDate | slice:0:10}}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-      </mat-card-content>
-      <mat-card-actions>
-      </mat-card-actions>
-    </mat-card>
-  </section>
-  
-</div>
+<section class="tournament-card-list">
+  <mat-card *ngFor="let tournament of tournamentList"
+    class="tournament-card" (click)="viewTournamentPage(tournament)">
+    <mat-card-header>
+      <mat-card-title class="tournament-name">{{tournament.name}}</mat-card-title>
+      <mat-card-subtitle>{{tournament.tournamentDate | slice:0:10}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+    </mat-card-content>
+    <mat-card-actions>
+    </mat-card-actions>
+  </mat-card>
+</section>
