Use snack bar to display error

--- a/apps/ubipong-ui/src/app/components/event-list/event-list.component.scss
+++ b/apps/ubipong-ui/src/app/components/event-list/event-list.component.scss
@@ -1,5 +1,15 @@
-.event-card-list {
-    .event {
-        margin: 1rem 0
+section.event-card-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: stretch;
+
+  mat-card.event {
+    margin: 1rem;
+    flex: 1 1 0;
+
+    :hover {
+      cursor: pointer;
     }
+  }
 }
