--- a/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.scss
+++ b/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.scss
@@ -1,3 +1,11 @@
 #tournament-page {
   margin: 1rem;
+
+  #form-field-new-name {
+    width: 20rem;
+  }
+
+  #form-field-new-challonge-url {
+    width: 20rem;
+  }
 }
