Use button to view round robin page

--- a/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.scss
+++ b/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.scss
@@ -1,6 +1,10 @@
 #tournament-page {
   margin: 1rem;
 
+  .tournament-actions {
+    margin: 1rem 0;
+  }
+
   #form-field-new-name {
     width: 20rem;
   }
