--- a/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.html
@@ -1,14 +1,17 @@
 <app-main-menu>
   <section id="tournament-page">
     <h1>{{tournament.name}}</h1>
-    
-    <a id="view-round-robin-page" (click)="navigateToRoundRobinPage()">View Round Robin</a> 
+
+    <section class="tournament-actions">
+      <button mat-raised-button color="primary" id="view-round-robin-page"
+        [disabled]="!hasEvents" (click)="navigateToRoundRobinPage()">View Round Robin</button> 
+    </section>
 
     <mat-accordion id="accordion-add-event" #accordionAddEvent>
       <mat-expansion-panel [(expanded)]="isNewEventFormOpen">
         <mat-expansion-panel-header>
           <mat-panel-title>
-            Add Event
+            <mat-icon>add_circle</mat-icon>Add Event
           </mat-panel-title>
           <mat-panel-description>
           </mat-panel-description>
