--- a/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
+++ b/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.html
@@ -20,6 +20,13 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>Ubipong Tournament Manager</span>
+
+      <span *ngIf="loggedIn; else buttonLogin"
+        class="user-control">{{userId}}</span>
+      <ng-template #buttonLogin>
+        <button mat-button class="user-control" (click)="login()">Log In</button>
+      </ng-template>
+
     </mat-toolbar>
     <ng-content></ng-content>
   </mat-sidenav-content>
