--- a/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.scss
+++ b/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.scss
@@ -1,23 +1,29 @@
 .sidenav-container {
-    height: 100%;
+  height: 100%;
+}
+
+.sidenav {
+  width: 200px;
+}
+
+.sidenav .mat-toolbar {
+  background: inherit;
+}
+
+.mat-toolbar.mat-primary {
+  display: flex;
+  justify-content: space-between;
+
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-image: 
+    linear-gradient(rgba(63, 81, 181, .7), rgba(0, 0, 0, .8)),
+    url('/assets/paddle-and-net-01.jpg');
+  background-size: cover;
+  background-position: center;
+
+  .user-control {
+    font-size: 1rem;
   }
-  
-  .sidenav {
-    width: 200px;
-  }
-  
-  .sidenav .mat-toolbar {
-    background: inherit;
-  }
-  
-  .mat-toolbar.mat-primary {
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    background-image: 
-      linear-gradient(rgba(63, 81, 181, .7), rgba(0, 0, 0, .8)),
-      url('/assets/paddle-and-net-01.jpg');
-    background-size: cover;
-    background-position: center;
-  }
-  
+}
