--- a/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.html
+++ b/apps/ubipong-ui/src/app/pages/tournament-page/tournament-page.component.html
@@ -7,7 +7,7 @@
         [disabled]="!hasEvents" (click)="navigateToRoundRobinPage()">View Round Robin</button> 
     </section>
 
-    <mat-accordion id="accordion-add-event" #accordionAddEvent>
+    <mat-accordion *ngIf="isLoggedIn" id="accordion-add-event">
       <mat-expansion-panel [(expanded)]="isNewEventFormOpen">
         <mat-expansion-panel-header>
           <mat-panel-title>
