--- a/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.scss
+++ b/apps/ubipong-ui/src/app/components/main-menu/main-menu.component.scss
@@ -19,7 +19,7 @@
   z-index: 1;
   background-image: 
     linear-gradient(rgba(63, 81, 181, .7), rgba(0, 0, 0, .8)),
-    url('/assets/paddle-and-net-01.jpg');
+    url('../../../assets/paddle-and-net-01.jpg');
   background-size: cover;
   background-position: center;
 
