Added status to event card

--- a/apps/ubipong-ui/src/app/components/event-list/event-list.component.scss
+++ b/apps/ubipong-ui/src/app/components/event-list/event-list.component.scss
@@ -11,5 +11,10 @@ section.event-card-list {
     :hover {
       cursor: pointer;
     }
+    
+    section {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
