--- a/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
+++ b/apps/ubipong-ui/src/app/components/event-list/event-list.component.html
@@ -1,9 +1,16 @@
 <section class="event-card-list">
   <mat-card class="event" *ngFor="let event of eventList">
     <mat-card-header>
-      <mat-card-title class="event-name">{{event.name}}</mat-card-title>
-      <mat-card-subtitle class="challonge-url"><a target="_new" href="https://challonge.com/{{event.challongeUrl}}">{{event.challongeUrl}}</a></mat-card-subtitle>
     </mat-card-header>
+    <mat-card-content>
+      <section>
+        <mat-card-title class="event-name">{{event.name}}</mat-card-title>
+      </section>
+      <section>
+          <div class="challonge-url"><a target="_new" href="https://challonge.com/{{event.challongeUrl}}">{{event.challongeUrl}}</a></div>
+        <div class="event-status">{{event.status}}</div>
+      </section>
+    </mat-card-content>
     <mat-card-actions>
       <button mat-button class="button-round-robin-match-sheet"
         color="primary" (click)="viewRoundRobinMatchSheet(event)">
